fix: whitespace no wrap causing overflow on mobile texts

--- a/source/components/base/link.astro
+++ b/source/components/base/link.astro
@@ -52,7 +52,7 @@ const optionalAttrs = {
 >
   {
     withExternalLinkArrow ? (
-      <span class="whitespace-nowrap">
+      <span>
         <slot />
         <Icon
           name="lucide:arrow-up-right"
