fix: links missing translations

--- a/source/components/base/link.astro
+++ b/source/components/base/link.astro
@@ -28,7 +28,7 @@ const {
 } = Astro.props;
 
 const { translations } = Astro.locals;
-const ariaLabel = `Link to "${label}"${targetBlank ? ` (${translations.misc.newTab})` : ""}`;
+const ariaLabel = `${translations.misc.linkTo} "${label}"${targetBlank ? ` (${translations.misc.newTab})` : ""}`;
 const tippyProps = Object.entries(withTooltip).reduce(
   (props, [key, value]) => {
     props[`data-tippy-${key}`] = `${value}`;
