--- a/source/sections/projects/content.astro
+++ b/source/sections/projects/content.astro
@@ -101,7 +101,7 @@ const currentDescription = next.description(locale);
       <Link
         class="group inline-block w-fit font-semibold text-primary"
         href={getLocaleRoute(locale, "archive")}
-        label="Project Archive"
+        label={translations.pages.archive.heading}
       >
         <span class="underline underline-offset-2">{t.archiveText}</span>
         <Icon
