refactor: hide next project

--- a/source/sections/projects/content.astro
+++ b/source/sections/projects/content.astro
@@ -46,7 +46,7 @@ const currentDescription = next.description(locale);
     {locale}
   />
 
-  <div
+  <!-- <div
     data-current-project
     class="pointer-events-none relative"
   >
@@ -93,7 +93,7 @@ const currentDescription = next.description(locale);
         {t.buttonReveal}
       </Button>
     </div>
-  </div>
+  </div> -->
 
   <div class="mx-4 mb-6 mt-12 sm:mx-12 lg:mt-24">
     <p class="text-pretty text-right text-lg font-medium sm:text-xl xl:mr-10">
@@ -114,8 +114,9 @@ const currentDescription = next.description(locale);
   </div>
 </Section>
 
+<!--
 <style>
-  @property --mask-alpha {
+   @property --mask-alpha {
     syntax: "<number>";
     inherits: true;
     initial-value: 1;
@@ -169,7 +170,7 @@ const currentDescription = next.description(locale);
 
   [data-current-project].show [data-current-project-trigger] {
     animation: 
-      /* these are globally available animations. */
+      // these are globally available animations.
       fade-out 0.2s forwards ease-in-out,
       display-none 0s forwards 0.2s;
   }
@@ -209,3 +210,4 @@ const currentDescription = next.description(locale);
     }
   }
 </style>
+-->
